--- a/_posts/2025-7-14-3.md
+++ b/_posts/2025-7-14-3.md
@@ -15,21 +15,46 @@ words:
   - "[RMI2020]秘鲁"
   - "[RMI2020]Peru"
   - "[RMI 2020]Peru"
+
 ---
 
 > [题目传送门](https://www.luogu.com.cn/problem/P11405)
+>
+> Upd 2026/2/26：修了代码，放了一份封装~~完善~~的；加入了 DP 推导部分。
+
+本篇题解主要介绍本题线性做法所利用的数据结构。~~当时第一次见到这种东西，没想到不那么冷门……~~
+
+# 题意分析
+
+DP 是显然的：
+
+$$
+f_i=\min_{j=i-k}^{i-1}\left(f_j+\max_{l=j+1}^is_l\right)
+$$
+
+维护不难做到 $\mathcal O(n\log n)$。然而发现没什么意义的交互和 200ms 的时限，显然是想卡时间。
+
+那么我们担心带 $\log$ 会过不去 $2.5\times10^6$，因此想**线性**做法。
+
+观察发现 $f$ 单调不降。证明也很简单，考虑假设 $i<j,f_i>f_j$，那么你完全可以用干掉 $1\sim j$ 的方式干掉 $1\sim i$，从而有 $f_i=f_j$，因此不成立。
+
+则真正有用的决策点 $j$ 其实不多：
+
+* $j$ 为 $s_j,s_{j+1},s_{j+2},\cdots,s_i$ 的严格最大值。
+
+  否则你发现 $j-1$ 不劣于 $j$。
+
+* $j=i-k$。因为 $j-1$ 不可能存在。
+
+  这是很容易维护的。
+
+那么我们就开一个单调队列 $q$ 维护 $[i-k+1,i]$ 的严格最大值的下标 $j$。每一个点 $j$ 的贡献就是 $f_j+s_i$，$s_i$ 为严格后缀最大值。
+
+把 $f_j+s_i$ 丢入一个双端队列 $Q$ 维护即可，需要每次查询最小值。
 
 # 双栈模拟队列
 
-**本篇题解主要介绍本题线性做法所利用的数据结构**。
-
-时间限制 $\text{300ms}$，又是交互题（无需 IO），显然是为了**卡时间**。
-
-那么这道题大概率是一个 $\mathcal O(n)$ 的线性做法。
-
-其实这道题目需要用到一个黑科技：**双栈模拟队列**。（具体见下文）
-
-***
+其实这道题目需要用到一个黑科技：**双栈模拟队列**。
 
 这道题目 DP 之后便是要维护一个数据结构，实现：
 
@@ -73,92 +98,133 @@ words:
 # AC 代码
 
 ```cpp
-#include <bits/stdc++.h>
-#define Mod 1000000007
-#define getchar() ((p1==p2&&(p2=(p1=buf)+fread(buf,1,1<<21,stdin),p1==p2))?EOF:*p1++)
+//#include<bits/stdc++.h>
+#include<algorithm>
+#include<iostream>
+#include<cstring>
+#include<iomanip>
+#include<cstdio>
+#include<string>
+#include<vector>
+#include<cmath>
+#include<ctime>
+#include<deque>
+#include<queue>
+#include<stack>
+#include<list>
 using namespace std;
-namespace DS{
-	long long mn1[2500010],mn2[2500010];
-	long long num1[2500010],num2[2500010];
-	int top1,top2;
-	void init()
-	{
-		mn1[0]=mn2[0]=0x3f3f3f3f3f3f3f3f;
-	}
-	long long qry(){return min(mn1[top1],mn2[top2]);}
-	void ins(long long x){num1[++top1]=x;mn1[top1]=min(mn1[top1-1],x);}
-	void del1()
-	{
-		if(top1==0)
-		{
-			int hf=(top2+1)>>1;
-			top1=hf;
-			for(int i=1;i<=hf;i++) mn1[i]=min(mn1[i-1],num1[i]=num2[hf+1-i]);
-			top2-=hf;
-			for(int i=1;i<=top2;i++) mn2[i]=min(mn2[i-1],num2[i]=num2[i+hf]);
+typedef long long ll;
+constexpr const int N=2.5e6,P=1e9+7;
+template<typename T>
+class Deque{
+	private:
+		vector<pair<T,T>>l,r;
+		
+		void build(int eps){
+			vector<T>s;
+			for(int i=l.size()-1;0<=i;i--){
+				s.push_back(l[i].first);
+			}
+			for(int i=0;i<r.size();i++){
+				s.push_back(r[i].first);
+			}
+			l.resize(0);r.resize(0);
+			int sizeL=(s.size()>>1)+eps;
+			for(int i=sizeL-1;0<=i;i--){
+				push_front(s[i]);
+			}
+			for(int i=sizeL;i<s.size();i++){
+				push_back(s[i]);
+			}
 		}
-		top1--;
-		if(top1==0)
-		{
-			int hf=top2>>1;
-			top1=hf;
-			for(int i=1;i<=hf;i++) mn1[i]=min(mn1[i-1],num1[i]=num2[hf+1-i]);
-			top2-=hf;
-			for(int i=1;i<=top2;i++) mn2[i]=min(mn2[i-1],num2[i]=num2[i+hf]);
+	public:
+		void push_back(T x){
+			T y=x;
+			if(r.size()){
+				y=min(y,r.back().second);
+			}
+			r.push_back({x,y});
 		}
-	}
-	void del2()
-	{
-		if(top2==0)
-		{
-			int hf=(top1+1)>>1;
-			top2=hf;
-			for(int i=1;i<=hf;i++) mn2[i]=min(mn2[i-1],num2[i]=num1[hf+1-i]);
-			top1-=hf;
-			for(int i=1;i<=top1;i++) mn1[i]=min(mn1[i-1],num1[i]=num1[i+hf]);
+		void push_front(T x){
+			T y=x;
+			if(l.size()){
+				y=min(y,l.back().second);
+			}
+			l.push_back({x,y});
 		}
-		top2--;
-		if(top2==0)
-		{
-			int hf=top1>>1;
-			top2=hf;
-			for(int i=1;i<=hf;i++) mn2[i]=min(mn2[i-1],num2[i]=num1[hf+1-i]);
-			top1-=hf;
-			for(int i=1;i<=top1;i++) mn1[i]=min(mn1[i-1],num1[i]=num1[i+hf]);
+		void pop_back(){
+			if(!r.size()){
+				build(0);
+			}
+			r.pop_back();
 		}
-	}
-}
-int n,k,stk[2500010],s[2500010],rea,top,ans;
-long long f[2500010];
+		void pop_front(){
+			if(!l.size()){
+				build(1);
+			}
+			l.pop_back();
+		}
+		int size(){
+			return l.size()+r.size();
+		}
+		bool empty(){
+			return !l.size()&&!r.size();
+		}
+		T front(){
+			if(!l.size()){
+				build(1);
+			}
+			return l.back().first;
+		}
+		T back(){
+			if(!r.size()){
+				build(0);
+			}
+			return r.back().first;
+		}
+		T query(){
+			if(l.size()&&r.size()){
+				return min(l.back().second,r.back().second);
+			}else if(l.size()){
+				return l.back().second;
+			}else if(r.size()){
+				return r.back().second; 
+			}
+		}
+};
 int solve(int n,int k,int s[]){
-	for(int i=n+1;i>0;i--){
+	for(int i=n;1<=i;i--){
 		s[i]=s[i-1];
 	}
-	DS::init();
-	for(int i=1;i<=n;i++)
-	{
-		while(rea<=top&&s[stk[top]]<=s[i])
-		{
-			if(rea<top) DS::del1();
-			top--;
+	s[0]=0;
+	int ans=0;
+	deque<int>q;
+	Deque<ll>Q;
+	static ll f[N+1];
+	for(int i=1;i<=n;i++){
+		while(q.size()&&s[q.back()]<=s[i]){
+			q.pop_back();
+			if(q.size()){
+				Q.pop_back();
+			}
 		}
-		while(rea<=top&&stk[rea]<i-k)
-		{
-			if(rea<top)	DS::del2();
-			rea++;
+		while(q.size()&&q.front()<i-k){
+			q.pop_front();
+			if(q.size()){
+				Q.pop_front();
+			}
 		}
-		if(rea<=top) DS::ins(f[stk[top]]+s[i]);
-		stk[++top]=i;
-		f[i]=min(DS::qry(),f[max(0,i-k)]+s[stk[rea]]);
+		if(q.size()){
+			Q.push_back(f[q.back()]+s[i]);
+		}
+		q.push_back(i);
+		if(Q.size()){
+			f[i]=min(Q.query(),s[q.front()]+f[max(i-k,0)]);
+		}else{
+			f[i]=s[q.front()]+f[max(i-k,0)];
+		}
+		ans=(23ll*ans+f[i])%P;
 	}
-	for(int i=n,bas=1;i;i--)
-	{
-		ans=(ans+f[i]%Mod*bas)%Mod;
-		bas=23ll*bas%Mod;
-	}
-	return ans; 
+	return ans;
 }
 ```
-
-
-
