--- a/_posts/2026-2-17-1.md
+++ b/_posts/2026-2-17-1.md
@@ -10,6 +10,7 @@ tags:
   - 基础算法
   - LCT
   - 省选/NOI−
+  - 
   - 未完
 words:
   - P3690 题解：【模板】动态树（LCT）
@@ -159,7 +160,7 @@ void update(int p){
 
 ### `rotate`
 
-同 Splay，唯一细节是需要通过 `isRpot(y)` 来判断 $y$ 是否为根，从而判断是否应当更新 $y$ 的父节点 $z$ 的子节点信息。
+同 Splay，唯一细节是需要通过 `isRoot(y)` 来判断 $y$ 是否为根，从而判断是否应当更新 $y$ 的父节点 $z$ 的子节点信息。
 
 ```cpp
 void rotate(int x){
@@ -374,9 +375,9 @@ void cut(int u,int v){
 
 ## 维护信息操作
 
-### 单点修改
+### 单点操作
 
-考虑我们不想上传，因此直接 `makeRoot` 之后单点修改即可。
+考虑我们不想上传更新，因此直接 `makeRoot` 之后单点操作即可。
 
 ```cpp
 void set(int x,int k){
@@ -385,9 +386,9 @@ void set(int x,int k){
 }
 ```
 
-### 路径查询
+### 路径操作
 
-`split` 之后查询 Splay 根节点信息即可。
+`split` 之后操作 Splay 根节点信息即可。
 
 ```cpp
 int query(int u,int v){
@@ -577,3 +578,652 @@ int main(){
 }
 ```
 
+## 维护路径信息
+
+> [Luogu P1501 [国家集训队] Tree II](https://www.luogu.com.cn/problem/P1501)
+>
+> 一棵 $n$ 个点的树，每个点的初始权值为 $1$。
+>
+> 对于这棵树有 $q$ 个操作，每个操作为以下四种操作之一：
+> 
+> - `+ u v c`：将 $u$ 到 $v$ 的路径上的点的权值都加上自然数 $c$；
+>- `- u1 v1 u2 v2`：将树中原有的边 $(u_1,v_1)$ 删除，加入一条新边 $(u_2,v_2)$，保证操作完之后仍然是一棵树；
+> - `* u v c`：将 $u$ 到 $v$ 的路径上的点的权值都乘上自然数 $c$；
+> - `/ u v`：询问 $u$ 到 $v$ 的路径上的点的权值和，将答案对 $51061$ 取模。
+> 
+> 对于 $100\%$ 的数据，$1\leq n,q\leq10^5$，$0\leq c\leq10^4$。
+
+对于 Splay 上的节点，维护加法、乘法标记和子树和即可。
+
+唯一需要注意的是，$0$ 号节点的信息不要动，不然你就只能特判子节点为空。（事实上，本题不需要。[原因见此](https://www.luogu.com.cn/discuss/1250806)。）
+
+<details class="success">
+    <summary>参考代码</summary>
+
+```cpp
+//#include<bits/stdc++.h>
+#include<algorithm>
+#include<iostream>
+#include<cstring>
+#include<iomanip>
+#include<cstdio>
+#include<string>
+#include<vector>
+#include<cmath>
+#include<ctime>
+#include<deque>
+#include<queue>
+#include<stack>
+#include<list>
+using namespace std;
+constexpr const int N=1e5,P=51061;
+int n;
+struct LCT{
+	struct node{
+		int value;
+		int sum,size,father,child[2];
+		bool reverse;
+		
+		int mul,add;
+	}t[N+1];
+	
+	void build(){
+		for(int i=1;i<=n;i++){
+			t[i].size=t[i].value=t[i].sum=t[i].mul=1;
+		}
+	}
+	
+	bool check(int p){
+		return t[t[p].father].child[1]==p;
+	}
+	bool isRoot(int p){
+		return t[t[p].father].child[0]!=p&&t[t[p].father].child[1]!=p;
+	}
+	void up(int p){
+		t[p].sum=(t[t[p].child[0]].sum+t[p].value+t[t[p].child[1]].sum)%P;
+		t[p].size=t[t[p].child[0]].size+1+t[t[p].child[1]].size;
+	}
+	void down(int p){
+		if(t[p].reverse){
+			t[t[p].child[0]].reverse^=1;
+			swap(t[t[p].child[0]].child[0],t[t[p].child[0]].child[1]);
+			t[t[p].child[1]].reverse^=1;
+			swap(t[t[p].child[1]].child[0],t[t[p].child[1]].child[1]);
+			t[p].reverse=false;
+		}
+		if(t[p].mul!=1){
+			t[t[p].child[0]].mul=1ll*t[t[p].child[0]].mul*t[p].mul%P;
+			t[t[p].child[0]].add=1ll*t[t[p].child[0]].add*t[p].mul%P;
+			t[t[p].child[0]].value=1ll*t[t[p].child[0]].value*t[p].mul%P;
+			t[t[p].child[0]].sum=1ll*t[t[p].child[0]].sum*t[p].mul%P;
+			t[t[p].child[1]].mul=1ll*t[t[p].child[1]].mul*t[p].mul%P;
+			t[t[p].child[1]].add=1ll*t[t[p].child[1]].add*t[p].mul%P;
+			t[t[p].child[1]].value=1ll*t[t[p].child[1]].value*t[p].mul%P;
+			t[t[p].child[1]].sum=1ll*t[t[p].child[1]].sum*t[p].mul%P;
+			t[p].mul=1;
+		}
+		if(t[p].add){
+			t[t[p].child[0]].add=(t[t[p].child[0]].add+t[p].add)%P;
+			t[t[p].child[0]].value=(t[t[p].child[0]].value+t[p].add)%P;
+			t[t[p].child[0]].sum=(t[t[p].child[0]].sum+1ll*t[t[p].child[0]].size*t[p].add)%P;
+			t[t[p].child[1]].add=(t[t[p].child[1]].add+t[p].add)%P;
+			t[t[p].child[1]].value=(t[t[p].child[1]].value+t[p].add)%P;
+			t[t[p].child[1]].sum=(t[t[p].child[1]].sum+1ll*t[t[p].child[1]].size*t[p].add)%P;
+			t[p].add=0;
+		}
+	}
+	void update(int p){
+		if(!isRoot(p)){
+			update(t[p].father);
+		}
+		down(p);
+	}
+	void rotate(int x){
+		int y=t[x].father,z=t[y].father;
+		bool mode=check(x);
+		t[y].child[mode]=t[x].child[!mode];
+		t[x].child[!mode]=y;
+		if(!isRoot(y)){
+			t[z].child[check(y)]=x;
+		}
+		if(t[y].child[mode]){
+			t[t[y].child[mode]].father=y;
+		}
+		t[y].father=x; 
+		t[x].father=z;
+		up(y);
+		up(x);
+	}
+	void splay(int x){
+		update(x);
+		while(!isRoot(x)){
+			int p=t[x].father;
+			if(isRoot(p)){
+				rotate(x);
+				break;
+			}
+			if(check(p)==check(x)){
+				rotate(p);
+				rotate(x);
+			}else{
+				rotate(x);
+				rotate(x);
+			}
+		}
+	}
+	void access(int x){
+		for(int p=0;x;p=x,x=t[x].father){
+			splay(x);
+			t[x].child[1]=p;
+			up(x);
+		}
+	}
+	void makeRoot(int x){
+		access(x);
+		splay(x);
+		t[x].reverse^=1;
+		swap(t[x].child[0],t[x].child[1]);
+	}
+	int find(int x){
+		access(x);
+		splay(x);
+		down(x);
+		while(t[x].child[0]){
+			x=t[x].child[0];
+			down(x);
+		}
+		splay(x);
+		return x;
+	}
+	void split(int u,int v){
+		makeRoot(u);
+		access(v);
+		splay(v);
+	}
+	void link(int u,int v){
+		makeRoot(u);
+		if(find(v)!=u){
+			t[u].father=v; 
+		}
+	}
+	void cut(int u,int v){
+		makeRoot(u);
+		if(find(v)==u&&t[v].father==u&&!t[v].child[0]){
+			t[v].father=t[u].child[1]=0; 
+		}
+	}
+	void add(int u,int v,int x){
+		split(u,v);
+		t[v].add=(t[v].add+x)%P;
+		t[v].value=(t[v].value+x)%P;
+		t[v].sum=(t[v].sum+1ll*t[v].size*x)%P;
+	}
+	void mul(int u,int v,int x){
+		split(u,v);
+		t[v].mul=1ll*t[v].mul*x%P;
+		t[v].add=1ll*t[v].add*x%P;
+		t[v].value=1ll*t[v].value*x%P;
+		t[v].sum=1ll*t[v].sum*x%P;
+	}
+	int query(int u,int v){
+		split(u,v);
+		return t[v].sum;
+	} 
+}t;
+int main(){
+	/*freopen("test.in","r",stdin);
+	freopen("test.out","w",stdout);*/
+	
+	ios::sync_with_stdio(false);
+	cin.tie(0);cout.tie(0);
+	
+	int m;
+	cin>>n>>m;
+	t.build();
+	for(int i=1;i<n;i++){
+		int u,v;
+		cin>>u>>v;
+		t.link(u,v);
+	}
+	while(m--){
+		char op;
+		int u,v,x;
+		cin>>op>>u>>v;
+		switch(op){
+			case '+':
+				cin>>x;
+				t.add(u,v,x);
+				break;
+			case '-':
+				t.cut(u,v);
+				cin>>u>>v;
+				t.link(u,v);
+				break;
+			case '*':
+				cin>>x;
+				t.mul(u,v,x);
+				break;
+			case '/':
+				cout<<t.query(u,v)<<'\n';
+				break;
+		}
+	}
+	
+	cout.flush();
+	 
+	/*fclose(stdin);
+	fclose(stdout);*/
+	return 0;
+}
+```
+</details>
+
+
+
+## 维护子树信息
+
+> [Luogu P4219 [BJOI2014] 大融合](https://www.luogu.com.cn/problem/P4219)
+>
+> $n$ 个点 $1\sim n$ 编号，给定 $q$ 次操作：
+>
+> * `A x y`，加边 $(x,y)$。
+> * `Q x y`，询问对于边 $(x,y)$，断开 $(x,y)$ 后子树 $x$ 和子树 $y$ 的子树大小乘积。
+>
+> 保证任意时刻，$n$ 个点构成一棵森林。
+
+树的形态改变，考虑 LCT。
+
+但是 LCT 并不能很好的维护子树信息，因为虚子节点的信息没有被统计，那么我们就强行加上这一部分的贡献。
+
+本题需要维护**包括虚子树**的子树大小 $\operatorname{size}(x)$。设 $\operatorname{size}_2(x)$ 表示 $x$ 的所有虚子节点子树大小之和。
+
+对应地改一下 `up`：
+
+```cpp
+void up(int p){
+    t[p].size=t[t[p].child[0]].size+1+t[t[p].child[1]].size+t[p].size2;
+}
+```
+
+除此之外，`rotate` 和 `spaly` 与 $\operatorname{size}_2(x)$ 无关。因为这都是一棵 Splay 内部的操作，不涉及到虚子节点父子关系的变更。
+
+`access` 涉及到了将右子节点直接更换，原来的右子节点便成为了虚子节点。据此更新即可。
+
+```cpp
+void access(int x){
+    for(int p=0;x;p=x,x=t[x].father){
+        splay(x);
+        t[x].size2+=t[t[x].child[1]].size-t[p].size;
+        t[x].child[1]=p;
+        up(x);
+    }
+}
+```
+
+`link` 的操作方式是把 $u$ `makeRoot` 后直接挂在 $v$ 上，成为 $v$ 的虚子节点。
+
+此时就要更新 $v$ 的信息，因此还要先对 $v$ 进行 `makeRoot`，再令 $\operatorname{size}_2(v)\leftarrow\operatorname{size}_2(v)+\operatorname{size}(u)$ 即可。
+
+```cpp
+void link(int u,int v){
+    makeRoot(u);
+    if(find(v)!=u){
+        makeRoot(v);
+        t[u].father=v;
+        t[v].size2+=t[u].size;
+    }
+}
+```
+
+查询时先断边 $(x,y)$，查询后在加边 $(x,y)$ 即可。
+
+<details class="note" open>
+    <summary>LCT 维护子树信息要求</summary>
+    <p>
+        <ul>
+            <li>维护信息可差分。因为将虚边变为实边的时候要排除原来实边的贡献。</li>
+            <li>不可差分的最值，也许可以开 <code>set</code> 维护。</li>
+        </ul>
+    </p>
+</details>
+
+
+<details class="success">
+    <summary>参考代码</summary>
+
+```cpp
+//#include<bits/stdc++.h>
+#include<algorithm>
+#include<iostream>
+#include<cstring>
+#include<iomanip>
+#include<cstdio>
+#include<string>
+#include<vector>
+#include<cmath>
+#include<ctime>
+#include<deque>
+#include<queue>
+#include<stack>
+#include<list>
+using namespace std;
+constexpr const int N=1e5;
+int n;
+struct LCT{
+	struct node{
+		int size,size2,father,child[2];
+		bool reverse;
+	}t[N+1];
+	
+	bool check(int p){
+		return t[t[p].father].child[1]==p;
+	}
+	bool isRoot(int p){
+		return t[t[p].father].child[0]!=p&&t[t[p].father].child[1]!=p;
+	}
+	void up(int p){
+		t[p].size=t[t[p].child[0]].size+1+t[t[p].child[1]].size+t[p].size2;
+	}
+	void down(int p){
+		if(t[p].reverse){
+			t[t[p].child[0]].reverse^=1;
+			swap(t[t[p].child[0]].child[0],t[t[p].child[0]].child[1]);
+			t[t[p].child[1]].reverse^=1;
+			swap(t[t[p].child[1]].child[0],t[t[p].child[1]].child[1]);
+			t[p].reverse=false;
+		}
+	}
+	void update(int p){
+		if(!isRoot(p)){
+			update(t[p].father);
+		}
+		down(p);
+	}
+	void rotate(int x){
+		int y=t[x].father,z=t[y].father;
+		bool mode=check(x);
+		t[y].child[mode]=t[x].child[!mode];
+		t[x].child[!mode]=y;
+		if(!isRoot(y)){
+			t[z].child[check(y)]=x;
+		}
+		if(t[y].child[mode]){
+			t[t[y].child[mode]].father=y;
+		}
+		t[y].father=x; 
+		t[x].father=z;
+		up(y);
+		up(x);
+	}
+	void splay(int x){
+		update(x);
+		while(!isRoot(x)){
+			int p=t[x].father;
+			if(isRoot(p)){
+				rotate(x);
+				break;
+			}
+			if(check(p)==check(x)){
+				rotate(p);
+				rotate(x);
+			}else{
+				rotate(x);
+				rotate(x);
+			}
+		}
+	}
+	void access(int x){
+		for(int p=0;x;p=x,x=t[x].father){
+			splay(x);
+			t[x].size2+=t[t[x].child[1]].size-t[p].size;
+			t[x].child[1]=p;
+			up(x);
+		}
+	}
+	void makeRoot(int x){
+		access(x);
+		splay(x);
+		t[x].reverse^=1;
+		swap(t[x].child[0],t[x].child[1]);
+	}
+	int find(int x){
+		access(x);
+		splay(x);
+		down(x);
+		while(t[x].child[0]){
+			x=t[x].child[0];
+			down(x);
+		}
+		splay(x);
+		return x;
+	}
+	void split(int u,int v){
+		makeRoot(u);
+		access(v);
+		splay(v);
+	}
+	void link(int u,int v){
+		makeRoot(u);
+		if(find(v)!=u){
+			makeRoot(v);
+			t[u].father=v;
+			t[v].size2+=t[u].size;
+		}
+	}
+	void cut(int u,int v){
+		makeRoot(u);
+		if(find(v)==u&&t[v].father==u&&!t[v].child[0]){
+			t[v].father=t[u].child[1]=0;
+		}
+	}
+}t;
+int main(){
+	/*freopen("test.in","r",stdin);
+	freopen("test.out","w",stdout);*/
+	
+	ios::sync_with_stdio(false);
+	cin.tie(0);cout.tie(0);
+	
+	int m;
+	cin>>n>>m;
+	while(m--){
+		char op; 
+		int x,y;
+		cin>>op>>x>>y;
+		switch(op){
+			case 'A':
+				t.link(x,y);
+				break;
+			case 'Q':
+				t.cut(x,y);
+				t.makeRoot(x);
+				t.makeRoot(y);
+				cout<<1ll*t.t[x].size*t.t[y].size<<'\n';
+				t.link(x,y);
+				break;
+		}
+	}
+	
+	cout.flush();
+	 
+	/*fclose(stdin);
+	fclose(stdout);*/
+	return 0;
+}
+```
+</details>
+
+## 维护连通性
+
+> [Luogu P2147 [SDOI2008] 洞穴勘测](https://www.luogu.com.cn/problem/P2147)
+>
+> 给定 $n$ 个点，$m$ 次操作：
+>
+> * `Connext u v`，加边 $(u,v)$。
+> * `Destroy u v`，删边 $(u,v)$。
+> * `Query u v`，查询 $u,v$ 是否连通。
+>
+> 保证任意时刻，原图均为一棵森林。
+
+$u,v$ 所在原树的根节点相同是 $u,v$ 连通的充要条件。
+
+<details class="success">
+    <summary>参考代码</summary>
+
+```cpp
+//#include<bits/stdc++.h>
+#include<algorithm>
+#include<iostream>
+#include<cstring>
+#include<iomanip>
+#include<cstdio>
+#include<string>
+#include<vector>
+#include<cmath>
+#include<ctime>
+#include<deque>
+#include<queue>
+#include<stack>
+#include<list>
+using namespace std;
+constexpr const int N=1e4;
+int n;
+struct LCT{
+	struct node{
+		int father,child[2];
+		bool reverse;
+	}t[N+1];
+	
+	bool check(int p){
+		return t[t[p].father].child[1]==p;
+	}
+	bool isRoot(int p){
+		return t[t[p].father].child[0]!=p&&t[t[p].father].child[1]!=p;
+	}
+	void up(int p){
+		
+	} 
+	void down(int p){
+		if(t[p].reverse){
+			t[t[p].child[0]].reverse^=1;
+			swap(t[t[p].child[0]].child[0],t[t[p].child[0]].child[1]);
+			t[t[p].child[1]].reverse^=1;
+			swap(t[t[p].child[1]].child[0],t[t[p].child[1]].child[1]);
+			t[p].reverse=false;
+		}
+	}
+	void update(int p){
+		if(!isRoot(p)){
+			update(t[p].father);
+		}
+		down(p);
+	}
+	void rotate(int x){
+		int y=t[x].father,z=t[y].father;
+		bool mode=check(x);
+		t[y].child[mode]=t[x].child[!mode];
+		t[x].child[!mode]=y;
+		if(!isRoot(y)){
+			t[z].child[check(y)]=x;
+		}
+		if(t[y].child[mode]){
+			t[t[y].child[mode]].father=y;
+		}
+		t[y].father=x; 
+		t[x].father=z;
+		up(y);
+		up(x);
+	}
+	void splay(int x){
+		update(x);
+		while(!isRoot(x)){
+			int p=t[x].father;
+			if(isRoot(p)){
+				rotate(x);
+				break;
+			}
+			if(check(p)==check(x)){
+				rotate(p);
+				rotate(x);
+			}else{
+				rotate(x);
+				rotate(x);
+			}
+		}
+	}
+	void access(int x){
+		for(int p=0;x;p=x,x=t[x].father){
+			splay(x);
+			t[x].child[1]=p;
+			up(x);
+		}
+	}
+	void makeRoot(int x){
+		access(x);
+		splay(x);
+		t[x].reverse^=1;
+		swap(t[x].child[0],t[x].child[1]);
+	}
+	int find(int x){
+		access(x);
+		splay(x);
+		down(x);
+		while(t[x].child[0]){
+			x=t[x].child[0];
+			down(x);
+		}
+		splay(x);
+		return x;
+	}
+	void split(int u,int v){
+		makeRoot(u);
+		access(v);
+		splay(v);
+	}
+	void link(int u,int v){
+		makeRoot(u);
+		if(find(v)!=u){
+			t[u].father=v;
+		}
+	}
+	void cut(int u,int v){
+		makeRoot(u);
+		if(find(v)==u&&t[v].father==u&&!t[v].child[0]){
+			t[v].father=t[u].child[1]=0;
+		}
+	}
+}t;
+int main(){
+	/*freopen("test.in","r",stdin);
+	freopen("test.out","w",stdout);*/
+	
+	ios::sync_with_stdio(false);
+	cin.tie(0);cout.tie(0);
+	
+	int m;
+	cin>>n>>m;
+	while(m--){
+		string op;
+		int x,y;
+		cin>>op>>x>>y;
+		switch(op[0]){
+			case 'C':
+				t.link(x,y);
+				break;
+			case 'D':
+				t.cut(x,y);
+				break;
+			case 'Q':
+				cout<<(t.find(x)==t.find(y)?"Yes":"No")<<'\n';
+				break;
+		}
+	}
+	
+	cout.flush();
+	 
+	/*fclose(stdin);
+	fclose(stdout);*/
+	return 0;
+}
+```
+</details>
