--- a/_posts/2026-2-18-1.md
+++ b/_posts/2026-2-18-1.md
@@ -46,7 +46,12 @@ words:
 
 考虑树套树解决，树状数组套线段树即可。
 
+<details class="success">
+    <summary>参考代码</summary>
+    <p>
         但是需要稍微卡一下空间。
+    </p>
+
 ```cpp
 //#include<bits/stdc++.h>
 #include<algorithm>
@@ -200,3 +205,4 @@ int main(){
 	return 0;
 }
 ```
+</details>
