--- a/_posts/2025-11-23-1.md
+++ b/_posts/2025-11-23-1.md
@@ -142,11 +142,7 @@ int main(){
 }
 ```
 
-# 二分图应用
-
-二分图性质简单，有诸多应用。
-
-## 二分图最大匹配
+# 二分图最大匹配
 
 <details class="info" open>
     <summary>图的匹配</summary>
@@ -158,7 +154,7 @@ int main(){
     </p>
 </details>
 
-### 匈牙利算法
+## 匈牙利算法
 
 ~~二分图算法怎么那么多名字。~~也可以叫 Kuhn 算法，实际上，Kuhn 算法是匈牙利算法的一部分。
 
@@ -169,7 +165,7 @@ int main(){
 
 考虑一条增广路，对其进行增广操作，即将增广路上的匹配边与非匹配边交换，则可以**增加 $1$ 条匹配边**。
 
-![001](https://img2024.cnblogs.com/blog/3541769/202511/3541769-20251126144215643-1393061072.png)
+![](/img/2025/11/001.png)
 
 考虑不断进行增广操作，则不能增广的时候为最大匹配。
 
@@ -266,10 +262,11 @@ int main(){
         $u$ 与节点 $u$ 配对的节点 $v$ 组成的边 $(u,v)$ 即为一条匹配边。
     </p>
     <p>
-        也可以写一下<a href="https://uoj.ac/problem/78" target="_blank">UOJ#78. 二分图最大匹配</a>，需要输出具体的边。
+        也可以写一下 <a href="https://uoj.ac/problem/78" target="_blank">UOJ#78. 二分图最大匹配</a>，需要输出具体的边。
     </p>
 <details class="success">
     <summary>参考代码</summary>
+
 
 ```cpp
 //#include<bits/stdc++.h>
@@ -341,11 +338,145 @@ int main(){
 </details>
 </details>
 
-### Dinic 算法
+## Dinic 算法
 
-也许应当叫 Hopcroft-Karp 算法，Dinic 算法本身是网络流算法（~~显然我不会网络流~~），Hopcroft-Karp 算法是 Dinic 算法的特殊形式，常数更小。
+> [luogu P3386 【模板】二分图最大匹配](https://www.luogu.com.cn/problem/P3386)
+>
+> 给定一个二分图，其左部点的个数为 $n$，右部点的个数为 $m$，边数为 $e$，求其最大匹配的边数。
+>
+> 左部点从 $1$ 至 $n$ 编号，右部点从 $1$ 至 $m$ 编号。
 
-### 二分图最小点覆盖
+也许应当叫 Hopcroft-Karp 算法，Dinic 算法本身是网络流算法，Hopcroft-Karp 算法是 Dinic 算法的特殊形式。
+
+考虑建立一个超级源点 $s$ 和超级汇点 $t$。$s$ 向左部连边，右部向 $t$ 连边，每条边流量均为 $1$，则最大流即最大匹配。
+
+时间复杂度 $\mathcal O\left(m\sqrt n\right)$。
+
+<details class="success">
+    <summary>参考代码</summary>
+
+```cpp
+//#include<bits/stdc++.h>
+#include<algorithm>
+#include<iostream>
+#include<cstring>
+#include<iomanip>
+#include<cstdio>
+#include<string>
+#include<vector>
+#include<cmath>
+#include<ctime>
+#include<deque>
+#include<queue>
+#include<stack>
+#include<list>
+#include<map>
+using namespace std;
+constexpr const int N=500*2+2,M=5e4+N;
+constexpr const int inf=0x3f3f3f3f;
+struct graph{
+	struct edge{
+		int v,r,w;
+	}a[(M<<1)+1+1];
+	int size=1,h[N+1];
+	inline void create(int u,int v,int w){
+		a[++size]={v,h[u],w};
+		h[u]=size;
+	}
+	edge& operator [](int x){
+		return a[x];
+	}
+}g;
+int n,s,t,cur[N+1],dis[N+1];
+bool bfs(){
+	memset(dis,0x3f,sizeof(dis));
+	for(int i=1;i<=n;i++){
+		cur[i]=g.h[i];
+	}
+	queue<int>q;
+	q.push(s);
+	dis[s]=0;
+	while(q.size()){
+		int x=q.front();q.pop();
+		for(int i=g.h[x];i;i=g[i].r){
+			auto [v,r,w]=g[i];
+			if(w>0&&dis[v]==inf){
+				q.push(v);
+				dis[v]=dis[x]+1;
+				if(v==t){
+					return true;
+				}
+			}
+		}
+	}
+	return false;
+}
+int dfs(int x,int Min){
+	if(x==t){
+		return Min;
+	}
+	int ans=0;
+	for(int i=cur[x];i&&Min;i=g[i].r){
+		cur[x]=i;
+		auto [v,r,w]=g[i];
+		if(w&&dis[v]==dis[x]+1){
+			int pl=dfs(v,min(Min,w));
+			if(!pl){
+				dis[v]=inf;
+			}
+			g[i].w-=pl;
+			g[i^1].w+=pl;
+			ans+=pl;
+			Min-=pl;
+		}
+	}
+	return ans;
+}
+int Dinic(){
+	int ans=0;
+	while(bfs()){
+		ans+=dfs(s,inf);
+	}
+	return ans;
+} 
+int main(){
+	/*freopen("test.in","r",stdin);
+	freopen("test.out","w",stdout);*/
+	
+	ios::sync_with_stdio(false);
+	cin.tie(0);cout.tie(0);
+	
+	int m,e;
+	cin>>n>>m>>e;
+	while(e--){
+		int u,v;
+		cin>>u>>v;
+		g.create(u,v+n,1);
+		g.create(v+n,u,0);
+	}
+	s=n+m+1;
+	t=n+m+2;
+	for(int i=1;i<=n;i++){
+		g.create(s,i,1);
+		g.create(i,s,0);
+	}
+	for(int i=1;i<=m;i++){
+		g.create(i+n,t,1);
+		g.create(t,i+n,0);
+	}
+	n=t; 
+	cout<<Dinic()<<'\n';
+	
+	cout.flush();
+	
+	/*fclose(stdin);
+	fclose(stdout);*/
+	return 0;
+}
+```
+</details>
+
+## 二分图最小点覆盖
 
 即在一张无向图中选择最少的点，满足每条边至少有一个端点被选。
 
@@ -360,9 +491,9 @@ int main(){
 
 设二分图 $G=(X,Y,E)$ 的最大匹配 $M$，未匹配的左部点集 $U$，从 $U$ 出发沿交错路到达点集为 $Z$，则 $(X\setminus Z)\cup(Y\cap Z)$ 为最小点覆盖。
 
-![002](https://img2024.cnblogs.com/blog/3541769/202511/3541769-20251126144226802-80503351.svg)
+![](/img/2025/11/002.svg)
 
-### 二分图最大独立集
+## 二分图最大独立集
 
 在一张无向图中选择最多的顶点，满足两两之间互不相邻。
 
@@ -370,6 +501,6 @@ int main(){
 
 因此可以利用二分图最大匹配求解二分图最大独立集。
 
-## 二分图最大权匹配
+# 二分图最大权匹配
 
 即满足匹配边的权值和最大的匹配。
